# xhs_note_analyzer

./: CLAUDE.md  README.md  mcp.json  xhs_workflow.json  xiaohongshu_auth.json  认证状态使用说明.md
xhs_note_analyzer/: .gitignore  PRECISION_CONTROL_GUIDE.md  README.md  env.example  pyproject.toml  requirements.txt  run_analysis.py  小红书笔记采集使用说明.md
xhs_note_analyzer/browser_data/xiaohongshu/: .browseruse_profile_id  ChromeFeatureState  Local State
xhs_note_analyzer/browser_data/xiaohongshu/Default/: Affiliation Database  Cookies  DIPS  Favicons  History  Login Data  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Web Data
xhs_note_analyzer/browser_data/xiaohongshu/GrShaderCache/: data_1  index
xhs_note_analyzer/browser_data/xiaohongshu/GraphiteDawnCache/: data_0  data_1  data_2  index
xhs_note_analyzer/browser_data/xiaohongshu/ShaderCache/: data_1  index
xhs_note_analyzer/browser_data/xiaohongshu/segmentation_platform/: ukm_db
xhs_note_analyzer/src/xhs_note_analyzer/: main.py
xhs_note_analyzer/src/xhs_note_analyzer/browser_agent/: hot_related_note_finder.py
xhs_note_analyzer/src/xhs_note_analyzer/models/: __init__.py  data_models.py
xhs_note_analyzer/src/xhs_note_analyzer/tools/: hot_note_finder_tool.py  mediacrawler_client.py
xhs_note_analyzer/tests/: README.md  run_all_tests.py  test_cookies_persistence.py  test_step1_find_hot_notes.py  test_step2_fetch_note_content.py  test_step3_multi_dimensional_analysis.py  test_step4_strategy_making.py  test_xhs_content_crawler.py
(+738 files in other folders)
