[project]
name = "xhs_note_analyzer"
version = "0.1.0"
description = "xhs_note_analyzer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
]

[project.scripts]
kickoff = "xhs_note_analyzer.main:kickoff"
run_crew = "xhs_note_analyzer.main:kickoff"
plot = "xhs_note_analyzer.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
